- Urivan Saaib pointed out a compiler conflict, where the C headers define
  the isblank macro, which was wiping out the TiXmlString::isblank() method.
  The method was unused and has been removed.

Changes in version 2.1.4
- Reworked the entity code. Entities were not correctly surving round trip input and output.
  Will now automatically create entities for high ascii in output.

Changes in version 2.1.5
- Bug fix by kylotan : infinite loop on some input (tinyxmlparser.cpp rev 1.27)
- Contributed by Ivica Aracic (bytelord) : 1 new VC++ project to compile versions as static libraries (tinyxml_lib.dsp), 
  and an example usage in xmltest.dsp
  (Patch request ID 678605)
- A suggestion by Ronald Fenner Jr (dormlock) to add #include <istream> and <ostream> for Apple's Project Builder 
  (Patch request ID 697642)
- A patch from ohommes that allows to parse correctly dots in element names and attribute names
  (Patch request 602600 and kylotan 701728)
- A patch from  hermitgeek ( James ) and wasteland for improper error reporting
- Reviewed by Lee, with the following changes:
	- Got sick of fighting the STL/non-STL thing in the windows build. Broke
	  them out as seperate projects.
	- I have too long not included the dsw. Added.
	- TinyXmlText had a protected Print. Odd.
	- Made LinkEndChild public, with docs and appropriate warnings.
	- Updated the docs.

2.2.0
- Fixed an uninitialized pointer in the TiXmlAttributes
- Fixed STL compilation problem in MinGW (and gcc 3?) - thanks Brian Yoder for finding this one
- Fixed an syntax error in TiXmlDeclaration - thanks Brian Yoder
- Fletcher Dunn proposed and submitted new error handling that tracked the row and column. Lee
  modified it to not have parse time impact.
- General cleanup suggestions from Fletcher Dunn.
- In error handling, general errors will no longer clear the error state of specific ones.
- Fix error in documentation : comments starting with "<?--" instead of "<--" (thanks ion_pulse)


