@@ -133,12 +133,14 @@ Changes in version 2.1.5
 2.2.0
 - Fixed an uninitialized pointer in the TiXmlAttributes
 - Fixed STL compilation problem in MinGW (and gcc 3?) - thanks Brian Yoder for finding this one
-- Fixed an syntax error in TiXmlDeclaration - thanks Brian Yoder
+- Fixed a syntax error in TiXmlDeclaration - thanks Brian Yoder
 - Fletcher Dunn proposed and submitted new error handling that tracked the row and column. Lee
-  modified it to not have parse time impact.
+  modified it to not have performance impact.
 - General cleanup suggestions from Fletcher Dunn.
 - In error handling, general errors will no longer clear the error state of specific ones.
 - Fix error in documentation : comments starting with "<?--" instead of "<--" (thanks ion_pulse)
+- Added the TiXmlHandle. An easy, safe way to browse XML DOMs with less code.
+
 
 
 
